chore: code cleaning and documentation