@@ -5,10 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!--
-        This POM is used as parent for any Wakamiti component in order to share the build process
+        This POM is used as a parent for any Wakamiti component in order to share the build process
         and some other global properties (organization, etc.).
 
-        The version number will be always the same regardless the versions of the components.
+        The version number will always be the same regardless of the versions of the components.
     -->
 
     <groupId>es.iti.wakamiti</groupId>
@@ -37,7 +37,7 @@
     </scm>
     <developers>
         <developer>
-            <email>luiinge@gmail.com</email>
+            <email>linesta@iti.es</email>
         </developer>
         <developer>
             <email>mgalbis@iti.es</email>
@@ -143,9 +143,13 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
                 <configuration>
-                    <argLine>${surefireJacocoAgent}
-                        -Djdk.net.URLClassPath.disableClassPathURLCheck=true
-                        --illegal-access=permit</argLine>
+                    <argLine>${surefireJacocoAgent} -Dfile.encoding=UTF-8</argLine>
+                    <systemProperties>
+                        <property>
+                            <name>version</name>
+                            <value>${project.version}</value>
+                        </property>
+                    </systemProperties>
                 </configuration>
             </plugin>
             <!-- Failsafe with JaCoCo agent -->
@@ -159,9 +163,13 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
-                            <argLine>${failsafeJacocoAgent}
-                                -Djdk.net.URLClassPath.disableClassPathURLCheck=true
-                                --illegal-access=permit</argLine>
+                            <argLine>${failsafeJacocoAgent} -Dfile.encoding=UTF-8</argLine>
+                            <systemProperties>
+                                <property>
+                                    <name>version</name>
+                                    <value>${project.version}</value>
+                                </property>
+                            </systemProperties>
                         </configuration>
                     </execution>
                 </executions>
@@ -311,7 +319,7 @@
             <id>sonatype</id>
             <build>
                 <plugins>
-                    <!-- This plugin disable the deploy for artifacts that already exists -->
+                    <!-- This plugin disables the deployment for artifacts that already exists -->
                     <plugin>
                         <groupId>org.honton.chas</groupId>
                         <artifactId>exists-maven-plugin</artifactId>
